src/main/java/com/example/testProject/error/ForbiddenException.java
package com.example.testProject.error;

public class ForbiddenException extends RuntimeException {
    public ForbiddenException(String message) {
        super(message);
    }
}

